# Seriema

./: .gitignore  Cargo.toml  README.md
audio/: Cargo.toml
audio/src/: lib.rs  sounds.rs
ecs/: Cargo.toml
ecs/src/: components.rs  entities.rs  lib.rs  resources.rs  systems.rs  util.rs  world.rs
editor/: Cargo.toml
editor/src/: main.rs
gen-tex/: Cargo.toml
gen-tex/src/: main.rs
gen-tileset/: Cargo.toml
gen-tileset/src/: main.rs
graphics/: Cargo.toml
graphics/src/: controls.rs  lib.rs  shader.wgsl  sprite.rs  tiles.rs  window.rs
src/: main.rs
src/ecs/: components.rs  mod.rs  resources.rs  systems.rs  tiles.rs  world.rs
src/graphics/: controls.rs  mod.rs  shader.frag  shader.vert  shader.wgsl  sprite.rs  window.rs
