[package]
name = "editor"
version = "0.1.0"
edition = "2021"

[dependencies]
pollster = "0.2.5"
serde = "1.0.136"
bincode = "1.3.3"
druid = "0.7.0"

[dependencies.ecs]
path = "../ecs"

[dependencies.graphics]
path = "../graphics"

[dependencies.image]
version = "0.24.1"
default-features = false
features = ["png"]